--- a/Irregulares/Irregulares.tex
+++ b/Irregulares/Irregulares.tex
@@ -559,7 +559,9 @@ Ananke & 52 & 141 & 57 & 250 & 600 \tabularnewline
 Praxidike & - & -  &   2 & 2 & 59 \tabularnewline
 \hdashline
 Carme & 90 & 204 & 37 & 331 & 973 \tabularnewline
+\hdashline
 Sinope & 41 & 169 & 11 & 221 & 854 \tabularnewline
+\hdashline
 Themisto & - & - & 16 & 16 & 55 \tabularnewline
 \hline
 Phoebe & 1239 & 516 & 32 & 1787 & 3479 \tabularnewline
